--- a/src/assets/css/config.scss
+++ b/src/assets/css/config.scss
@@ -8,12 +8,20 @@ $rootFontSize: 375/10;
 
 //  定义正文的 字体大小
 $fontSize: px2rem(14);
+// 标题字体大小
+$titleSize:px2rem(16);
+// 正文字体
+$infoSize: px2rem(12);
+
+$radiusSize: px2rem(6);
+
+$marginSize: px2rem(8);
 
 // 主题色
 $mainColor: #d81e06;
-
 // 分割线颜色
 $lineColor: #e5e5e5;
-
 // 背景色
 $bgColor: #f5f5f5;
+// 废弃字体颜色
+$hintColor: #999;
