--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,2 +1,18 @@
 @import "reset";
 @import "config";
+
+// 文本最多两行展示，其余用省略号
+.text-line-2{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+}
+
+.clearfix:after{
+  content: "";
+  display: block;
+  clear: both;
+}
